--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </label>
         </div>
         <div class="col-md-2">
-            <a href="./tool/tool.html" class="btn btn-info btn-sm" style="margin-right: 10px;">配置代码加解密</a>
+            <a href="./tool/index.html" class="btn btn-info btn-sm" style="margin-right: 10px;">配置代码加解密</a>
         </div>
     </div>
     <h4></h4>
