--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3>
             TVBOX接口地址配置编辑器 &nbsp;<small>本地记录依赖浏览器缓存，清空缓存将丢失记录</small>
         </h3>
-        <p><p><font size=4><b><a  href="https://www.zytnb.com/9.html"style="color:red">>>>【TVBOX最新接口获取】</a></b></font>
+        <p><p><font size=4><b><a  href="https://tv.feiyangyyds.cf/tvbox.json"style="color:red">>>>【TVBOX最新接口获取】</a></b></font>
     </div>
     <div class="row">
         <div class="btn-group btn-group-sm col-md-5" role="group">
