--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/animate.css@3.2.4/animate.min.css"> -->
     <link rel="stylesheet" href="./lib/animate.css@3.2.4/animate.min.css">
     <link rel="stylesheet" href="./static/editor.css">
-    <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>TVBOX接口地址配置编辑器-简单易用制作TVBOX接口配置工具</title>
     <meta name="keywords" content="TVBOX接口地址配置编辑器, TVBOX接口配置工具, 新一代接口配置编辑器" />
 <meta name="description" content="TVBOX接口地址配置编辑器是一款快速教你如何制作TVBOX接口，帮助您快速配置TVBOX接口地址，影视仓接口地址。" />
